data/derived/sp14/progs/unify/prog3593.ml.out
Characters 25-26:
  let foo = (List.map incr 9)::(List.map decr [10]);;
                           ^
Error: This expression has type int but an expression was expected of type
         int list
